<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.com.barbero</groupId>
	<artifactId>exemplo-gae</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<name>exemplo-gae</name>
	<url>http://maven.apache.org</url>

	<dependencies>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>4.0.9.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.objectify</groupId>
			<artifactId>objectify</artifactId>
			<version>4.1.3</version>
		</dependency>

		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>1.9.25</version>
		</dependency>




	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.google.appengine</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>1.9.25</version>
				<configuration>
					<port>8888</port>
					<jvmFlags>
						<jvmFlag>-Xdebug</jvmFlag>
						<jvmFlag>-Xnoagent</jvmFlag>
						<jvmFlag>-DblobFile=/${blobFile}</jvmFlag>
						<jvmFlag>-DemailUsuario=usuario0@email.com</jvmFlag>
						<jvmFlag>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n</jvmFlag>
						<jvmFlag>-XX:MaxPermSize=256m</jvmFlag>
					</jvmFlags>
					<disableUpdateCheck>true</disableUpdateCheck>
					<fullScanSeconds>0</fullScanSeconds>
					<address>0.0.0.0</address>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
